--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
   },
   "repository": {
 		"type": "git",
-		"url": "git+https://github.com/bun913/zephyr-api-client.git"
+		"url": "git+https://github.com/bun913/mcp-testrail.git"
 	},
 	"license": "MIT"
 }
